--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hola mundo</title>
 </head>
 <body>
+    <h3>Esto es un ejemplo</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, provident! Et commodi aspernatur, dolorum minus ullam illo ea nisi beatae eos quos repellat, necessitatibus corporis tenetur cumque molestiae quae. Tenetur!</p>
 </body>
 </html>
