Se modifico el parrafo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h3>Esto es un ejemplo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, provident! Et commodi aspernatur, dolorum minus ullam illo ea nisi beatae eos quos repellat, necessitatibus corporis tenetur cumque molestiae quae. Tenetur!</p>
+    <p>Lorem hola, adipisicing elit. Ut, provident! Et commodi aspernatur, dolorum minus ullam illo ea nisi beatae eos quos repellat, necessitatibus corporis tenetur cumque molestiae quae. Tenetur!</p>
 </body>
 </html>
